reb/assets/style.css
/* Global */
a {
	/*color: #222;*/
}
body {
	background-color: #F8F8F8;
}
#site-header {
	background-color: #fff;
	height: 8.5rem;
	position: relative;
	z-index: 16;
}
#site-header header {
	/*background-color: #fff;*/
}
#site-header #navbar .navbar-brand {
	display: none;
}
#site-header.float header #logobar {
	display: none;
}
#site-header.float header {
	position: fixed;
	top: 0;
	width: 100%;
}
#site-header.float #navbar .navbar-brand {
	display: block;
}
#main {
	background-color: #fff;
	padding-bottom: 4rem;
}
#logobar {
	background: none;
	background-color: #fff;
}
#global-search [type="text"] {
	border-radius: 2rem;
}
#global-search [type="submit"] {
	border: none;
	display: none;
}
#navbar {
	padding: 0;
}
#navbar .navbar-brand {
	font-size: 1rem;
	line-height: 2rem;
}
#navbar .nav-item {
	margin-left: 1rem;
	font-size: 1.1rem;
}
#navbar .nav-item.active {
	/*background-color: rgba(0,0,0,0.2);*/
}
#navbar .nav-link {
	color: #fff;
	padding: 0.8rem 1rem;
}
#navbar .nav-link:hover {
	background-color: rgba(0,0,0,1.0);
}
.bg-primary {
	background-color: #00AEEF !important;
}
.dropdown-menu {
	background-color: rgba(0,0,0,0.6);
}
.dropdown-item {
	color: #ccc;
}
.dropdown-item:focus, .dropdown-item:hover {
	background-color: rgba(1,1,1,0.2);
	color: #fff;
}
.jcarousel {
	position: relative;
	overflow: hidden;
}
.jcarousel ul {
	width: 20000em;
	position: relative;
	list-style: none;
	margin: 0;
	padding: 0;
}
.jcarousel li {
	float: left;
}
#carousel {
	background-color: #f1f5f9;
}

#carousel .carousel-item {
/*	display: inline-block;*/
	width: auto;
	height: 438px;
	background: #369;
	color: #fff;
	font-size: large;
	background: center center no-repeat;
}

#carousel #crs01 {
	background-image: url(../images/carousel_01.jpg);
}
#carousel #crs02 {
	background-image: url(../images/carousel_02.jpg);
}
#carousel #crs03 {
	background-image: url(../images/carousel_03.jpg);
}
#carousel #crs04 {
	background-image: url(../images/carousel_04.jpg);
}

#perspective {
	margin: 6em auto 1em;
}

#perspective .col {
	padding-top: 130px;
	background-repeat: no-repeat;
	background-position: center top;
}
#perspective dl {
	display: block;
	color: #777;
}

#perspective dl dt {
	text-align: center;
	font-size: 1.2em;
	margin-bottom: 1em;
	font-weight: 400;
}
#perspective dl dd {
	font-size: 0.9em;
	font-weight: 400;
}

#psp01 {
	background-image: url(../images/feature_01.png);
}
#psp02 {
	background-image: url(../images/feature_02.png);
}
#psp03 {
	background-image: url(../images/feature_03.png);
}
#psp04 {
	background-image: url(../images/feature_04.png);
}

.products_title {
	text-align: center;
	color: #7BBA03;
	font-family: PingFang TC;
	font-weight: lighter;
	font-size: 2em;
	background: url(../images/product_topline.png) center bottom no-repeat;
	padding: 20px 0 20px;
	margin: 0 0 20px;
}

#products {
	margin: 2rem auto 4rem;
}
#products .p-2 {
	padding: 15px 15px !important;
}
#products .card {
	padding: 8px;
	border: none;
	border-radius: 0;
	box-shadow: 0 0 5px 0px rgba(0,0,0,0.1)
}
#products .card-body {
	padding: 8px;
	background: rgba(0,0,0,0.2);
	color: #fff;
	position: absolute;
	left: 8px;
	bottom: 8px;
	width: 300px;
}
#products .card-body h4 {
	font-size: 1em;
	margin-bottom: 0.5rem;
}
#products .card-body p {
	font-size: 0.8em;
	margin: 0;
}
#products .btn-primary {
	background: rgba(0,0,0,0);
	border: none;
	position: absolute;
	right: 10px;
	bottom: 10px;
}
#newsupdate {
	background-color: #4A515E;
	color: #F0F0E1;
	padding: 2rem 0;
}
#newsupdate h2 {
	font-size: 2rem;
	font-weight: lighter;
}
#newsupdate a {
	color: #FCF9E3;
	text-decoration: none;
}
#newsfeed {
	margin: 2em auto 0;
}
#newsfeed li:hover {
	background: rgba(1,1,1,0.2);
}
#newsfeed .list-group-item {
	background: transparent;
	border: none;
	padding: 0.2rem 1.25rem;
	font-weight: lighter;
	font-family: "Roboto Condensed";
}
#newsfeed .badge-primary {
	background: transparent;
	font-weight: lighter;
	font-size: 80%;
	color: #F0F0E1;
}
footer {
	padding: 1em;
	background-color: #F8F8F8;
	border-top: 1px solid #E8EAEC;
	color: #BBBBBB;
	font-size: 0.9rem;
	font-family: "OpenSans Condensed", "Roboto Condensed";
	font-weight: 200;
}
footer .row {
	margin-bottom: 2rem;
}
footer p {
	margin: 0;
}
footer .copyright {
	padding: 0.5rem 0;
}
footer a {
	color: #bbb;
}
footer a:hover {
	color: #777;
	text-decoration: none;
}
footer small {
	font-weight: lighter;
}

/* NEWS */

#news-banner {
	background-color: #F7F8FD;
	margin: 0 auto;
}
#news-banner .col {
	height: 200px;
}
#news-banner .col-8 {
	background: url(../images/newspaper.jpg) no-repeat;
}
#news-banner .col-4 {
	background: url(../images/coffee.jpg) no-repeat left bottom;
}
.location {
	background-color: #ececec;
	font-weight: 100;
}
.location .breadcrumb {
	background-color: #ececec;
	padding: 0.5rem 0;
	margin-bottom: 0;
}

.location .breadcrumb-item, .location .breadcrumb-item::before {
	color: #555;
}
.location a {
	color: #555;
}

.page-header {
	margin: 2rem auto 0;
}
.page-header h2 {
	font-family: PingFang TC;
	font-weight: 300;
	font-size: 1.5rem;
	border-bottom: 1px solid #e3e3e3;
	line-height: 3rem;
}

.news-list {
	margin-bottom: 2rem;
}
.news-list .media {
	border-bottom: 1px solid #e3e3e3;
	padding: 2rem 0;
	flex-wrap: wrap;
	flex-direction: row;
}
.news-list .my-4 {
	margin: 0 !important;
}
.news-list .media-img {
	margin-right: 1rem;
}
.news-list .media-body p {
	font-size: 0.875rem;
}
.news-list .mb-1 {
	margin-bottom: 1.0rem !important;
}
.news-list .mb {
	min-height: 5.2rem;
	margin: 0 0 0.5rem;
	color: #666;
}
.news-list .mf {
	margin: 0;
	color: #999;
}
.news-list .mf small {
	font-size: 0.875rem;
	font-family: Roboto Condensed;
	font-weight: 200;
}
.news-list .mb-1 a {
	color: #222;
}
.news-list .mf a {
	color: #777;
}

.pagination .page-link {
	color: #222;
}
.page-item.active .page-link {
	background-color: #777;
	border-color: #777;
	color: #fff;
}
.page-link:focus, .page-link:hover {
	background-color: #eee;
	border-color: #ddd;
}
/* ... */

